app/assets/styles/base/_global.css
body{
  font-family:'Roboto',sans-serif;
  color:#333;
}
img
{
  max-width:100%;
  width:100%;
}
.img-caption{
    font-size:.75rem;
    padding-top:0;
    margin-top:0;
    font-style: italic;
    font-weight: 200;
    
    &--white-text{
        color:#FFF;
    }
}
*{
    box-sizing: border-box;
}
a {
  color:$main-blue;
    text-decoration: none;
    
    &:hover{
        color:$darkBlue;
        text-decoration: underline;
    }
}

h4{
    font-weight: 300;
    margin-top:.5em;
}
hr{
    border:1px dotted #FFF;
    line-height: 1.625;
}
hr.blue-hr{
    border: 1px dotted $main-blue;
    line-height: 1.625;
}



button{
    border:0;
    border-radius: 5px;
}

.white-text {
    color:#FFF !important;
}
.blue-text {
    color:$main-blue !important;
}

.read-more{
    cursor: pointer;
    color: #36c;
    &:hover{
        color:$darkBlue;
    }
}

p {
    a{
        color:$main-blue;
        font-weight: bold;
    }
}


.phone{
    position: relative;
    &:before{
            content: "\f095";
        display: inline-block;
        font: normal normal normal 14px/1 FontAwesome;
        font-size: inherit;
        text-rendering: auto;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
         margin-right:10px;
         font-size:1.2rem;
    }
}

.time{
    position: relative;
    &:before{
            content: "\f017";
        display: inline-block;
        font: normal normal normal 14px/1 FontAwesome;
        font-size: inherit;
        text-rendering: auto;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
         margin-right:10px;
         font-size:1.2rem;
    }
}

  
.email{
    position: relative;
      &:before{
              content: "\f003";
        display: inline-block;
        font: normal normal normal 14px/1 FontAwesome;
        font-size: inherit;
        text-rendering: auto;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
          margin-right:10px;
          font-size:1.2rem;
    }
}


ul{
    margin:0;
    padding:0;
}

li{
    margin:0;
    padding:0;
}


.margin-top-15{
    margin-top:15px;
}


.fa-chevron-down{
        position: relative;
        z-index: 20;
        &:before{
        position: absolute;
        left:50%;
        left:-100px;
        
        transform: translateX(-50%);
        content: "";
        display: inline-block;
        font: normal normal normal 14px/1 FontAwesome;
        font-size: inherit;
        text-rendering: auto;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        margin-right: 10px;
        color:#FFF;
        &:hover{
                color:$dark-red !important;
            }
    }
    
    @mixin atSmall {
        &:before {
             content: "\f078";
            bottom:-80px;
            font-size: 2rem;
        }
    }
     @mixin atMedium{
        &:before{
           bottom:-80px;
            font-size: 3rem;
        }
    }
    
    @mixin atLarge{
        &:before{
           bottom:-250px;
            font-size: 4rem;
        }
    }
}

